--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ dependencies {
             "com.codeborne:selenide:5.20.1",
             "org.hamcrest:hamcrest-all:1.3",
             "com.codeborne:pdf-test:1.5.1",
+            "com.codeborne:xls-test:1.4.3",
             "org.junit.jupiter:junit-jupiter-api:5.7.1")
     testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.7.1"
 }
