--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ dependencies {
             "org.hamcrest:hamcrest-all:1.3",
             "com.codeborne:pdf-test:1.5.1",
             "com.codeborne:xls-test:1.4.3",
+            "net.lingala.zip4j:zip4j:1.3.2",
             "org.junit.jupiter:junit-jupiter-api:5.7.1")
     testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.7.1"
 }
